--- a/styles/sass/partials/_general-styles.scss
+++ b/styles/sass/partials/_general-styles.scss
@@ -8,11 +8,60 @@ html {
   font-family: $general-font;
 }
 
+.wrapper {
+  width: 85%;
+  max-width: 1260px;
+  margin: 0 auto;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+i {
+  font-family: FontAwesome;
+  font-style: normal;
+  color: $green;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.img-container {
+  box-shadow: 15px 15px $yellow;
+}
+
+p {
+  margin: 0;
+}
+
 button {
   cursor: pointer;
+  border: none;
+  font-weight: bold;
+  line-height: 1.6rem;
+  letter-spacing: 1px;
+  background-color: $green;
+  color: $off-white;
+  padding: 10px 30px;
+}
+
+main,
+aside {
+  background-color: $off-white;
+}
+
+footer {
+  background-color: $black;
+  text-align: center;
+  color: white;
+  font-family: $text-font;
+  padding: 10px 0;
 }
