--- a/styles/style.css
+++ b/styles/style.css
@@ -272,11 +272,61 @@ html {
   font-family: "Josefin Sans", sans-serif;
 }
 
+.wrapper {
+  width: 85%;
+  max-width: 1260px;
+  margin: 0 auto;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+i {
+  font-family: FontAwesome;
+  font-style: normal;
+  color: #0e902d;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.img-container {
+  -webkit-box-shadow: 15px 15px #f8e71c;
+          box-shadow: 15px 15px #f8e71c;
+}
+
+p {
+  margin: 0;
+}
+
 button {
   cursor: pointer;
+  border: none;
+  font-weight: bold;
+  line-height: 1.6rem;
+  letter-spacing: 1px;
+  background-color: #0e902d;
+  color: #f0efed;
+  padding: 10px 30px;
+}
+
+main,
+aside {
+  background-color: #f0efed;
+}
+
+footer {
+  background-color: #2c2c2c;
+  text-align: center;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  padding: 10px 0;
 }
