--- a/styles/sass/partials/_general-styles.scss
+++ b/styles/sass/partials/_general-styles.scss
@@ -6,6 +6,7 @@ body {
 html {
   font-size: 125%;
   font-family: $general-font;
+  color: $black;
 }
 
 .wrapper {
@@ -17,6 +18,7 @@ html {
 a {
   color: inherit;
   text-decoration: none;
+  padding: 15px;
 }
 
 ul {
@@ -38,8 +40,22 @@ img {
   box-shadow: 15px 15px $yellow;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
 p {
   margin: 0;
+}
+
+h1 {
+  font-weight: normal;
+}
+
+p {
+  font-family: $text-font;
+  line-height: 1.6rem;
 }
 
 button {
