--- a/styles/style.css
+++ b/styles/style.css
@@ -270,6 +270,7 @@ body {
 html {
   font-size: 125%;
   font-family: "Josefin Sans", sans-serif;
+  color: #2c2c2c;
 }
 
 .wrapper {
@@ -281,6 +282,7 @@ html {
 a {
   color: inherit;
   text-decoration: none;
+  padding: 15px;
 }
 
 ul {
@@ -303,8 +305,22 @@ img {
           box-shadow: 15px 15px #f8e71c;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
 p {
   margin: 0;
+}
+
+h1 {
+  font-weight: normal;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  line-height: 1.6rem;
 }
 
 button {
@@ -329,4 +345,83 @@ footer {
   color: white;
   font-family: "Roboto", sans-serif;
   padding: 10px 0;
+}
+
+.index header {
+  background-image: url(../planted-final-assets/home-image-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: #f0efed;
+  height: 80vh;
+}
+.index header ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-left: 10px;
+}
+.index header li {
+  margin: 0 15px;
+  text-transform: uppercase;
+}
+.index header li:nth-child(1) {
+  color: #f8e71c;
+}
+.index header h2 {
+  font-weight: normal;
+  text-transform: lowercase;
+  color: #f8e71c;
+  font-size: 8.3rem;
+  margin: 0 auto;
+  margin-top: calc((80vh - 63px - 382px) / 2);
+  max-width: 700px;
+  position: relative;
+  z-index: 1;
+}
+.index .main-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 0;
+}
+
+span {
+  text-transform: capitalize;
+  color: #f0efed;
+}
+
+.header-img-2 {
+  background-image: url(../planted-final-assets/header-box.jpg);
+  background-position: center;
+  width: 500px;
+  height: 500px;
+  -o-object-fit: scale-down;
+     object-fit: scale-down;
+  position: absolute;
+  top: 330px;
+  right: 0px;
+}
+
+.about {
+  padding: 180px 0 150px;
+  height: 70vh;
+}
+
+.about-content {
+  margin-top: 20px;
+  text-align: center;
+}
+.about-content h3 {
+  font-size: 2.8rem;
+  letter-spacing: 1.3px;
+}
+.about-content p {
+  margin: 25px 0;
 }
