--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,4 @@
 @import "./partials/setup";
-@import "./partials/variables";
+@import "./partials/variables-and-mixins";
 @import "./partials/general-styles";
 @import "./partials/index";
