--- a/styles/style.css
+++ b/styles/style.css
@@ -335,7 +335,10 @@ footer {
   text-align: center;
   color: white;
   font-family: "Roboto", sans-serif;
-  padding: 10px 0;
+  padding: 5px 0;
+}
+footer p {
+  margin: 0 auto;
 }
 
 .index {
@@ -543,4 +546,64 @@ span {
   content: "\f879";
   -webkit-transform: scaleX(-1);
           transform: scaleX(-1);
+}
+
+.main-banner {
+  background-image: url(../planted-final-assets/banner-image.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 420px;
+}
+
+.founder {
+  margin: 100px auto;
+}
+.founder h4 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.1rem;
+  letter-spacing: 0.05rem;
+  margin: 0;
+}
+.founder .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.founder .img-container {
+  max-width: 300px;
+  max-height: 300px;
+}
+.founder .text-container {
+  max-width: 60%;
+  margin-left: 80px;
+}
+
+.gallery {
+  background-color: white;
+  padding: 100px 0;
+}
+.gallery ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0;
+  margin: 0;
+}
+.gallery li {
+  max-width: 30%;
 }
