--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -2,3 +2,4 @@
 @import "./partials/variables-and-mixins";
 @import "./partials/general-styles";
 @import "./partials/index";
+@import "./partials/contact";
