--- a/styles/sass/partials/_variables-and-mixins.scss
+++ b/styles/sass/partials/_variables-and-mixins.scss
@@ -29,6 +29,7 @@ $text-font: "Roboto", sans-serif;
   font-family: $general-font;
   font-weight: normal;
   font-size: 8.3rem;
+  line-height: 7rem;
   margin: 0;
 }
 
