--- a/styles/sass/partials/_general-styles.scss
+++ b/styles/sass/partials/_general-styles.scss
@@ -65,6 +65,44 @@ aside {
   background-color: $off-white;
 }
 
+form {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  button {
+    @include button-style;
+    width: 100%;
+    margin-top: 50px;
+  }
+
+  input[type="text"],
+  input[type="email"] {
+    width: 48%;
+    margin-bottom: 40px;
+    border: none;
+    border-bottom: 2px solid $green;
+    padding: 20px;
+
+    &:active,
+    &:focus {
+      outline: 2px solid $forest-green;
+    }
+  }
+
+  textarea {
+    width: 100%;
+    min-height: 200px;
+    padding: 30px 20px;
+    border: 2px solid $green;
+
+    &:active,
+    &:focus {
+      outline: 2px solid $forest-green;
+    }
+  }
+}
+
 footer {
   background-color: $black;
   text-align: center;
