--- a/styles/style.css
+++ b/styles/style.css
@@ -344,6 +344,57 @@ aside {
   background-color: #f0efed;
 }
 
+form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+form button {
+  cursor: pointer;
+  border: none;
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
+  line-height: 1.6rem;
+  letter-spacing: 0.05rem;
+  background-color: #0e902d;
+  color: #f0efed;
+  padding: 10px 30px;
+  width: 100%;
+  margin-top: 50px;
+}
+form button:hover, form button:focus {
+  background-color: #074115;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+form input[type=text],
+form input[type=email] {
+  width: 48%;
+  margin-bottom: 40px;
+  border: none;
+  border-bottom: 2px solid #0e902d;
+  padding: 20px;
+}
+form input[type=text]:active, form input[type=text]:focus,
+form input[type=email]:active,
+form input[type=email]:focus {
+  outline: 2px solid #074115;
+}
+form textarea {
+  width: 100%;
+  min-height: 200px;
+  padding: 30px 20px;
+  border: 2px solid #0e902d;
+}
+form textarea:active, form textarea:focus {
+  outline: 2px solid #074115;
+}
+
 footer {
   background-color: #2c2c2c;
   text-align: center;
@@ -391,6 +442,7 @@ footer p {
   font-family: "Josefin Sans", sans-serif;
   font-weight: normal;
   font-size: 8.3rem;
+  line-height: 7rem;
   margin: 0;
   text-transform: lowercase;
   color: #f8e71c;
@@ -547,11 +599,14 @@ span {
   content: "\f0c0";
 }
 
-.blog a {
+.blog-link a {
   padding-left: 0;
 }
-.blog::before {
+.blog-link::before {
   content: "\f15b";
+}
+.blog-link:active {
+  color: #f8e71c;
 }
 
 .get-in-touch::before {
@@ -647,7 +702,7 @@ span {
 }
 .contact header .wrapper div {
   max-width: 300px;
-  margin-top: 180px;
+  margin-top: 130px;
 }
 .contact ul {
   display: -webkit-box;
@@ -668,8 +723,7 @@ span {
 .contact nav {
   background-color: black;
 }
-
-h2 {
+.contact h2 {
   font-family: "Josefin Sans", sans-serif;
   color: #f8e71c;
   font-weight: bold;
@@ -707,56 +761,65 @@ h2 {
   bottom: 150px;
   right: 60px;
 }
-.contact-form-container button {
-  cursor: pointer;
-  border: none;
-  font-family: "Josefin Sans", sans-serif;
-  font-weight: bold;
-  line-height: 1.6rem;
-  letter-spacing: 0.05rem;
-  background-color: #0e902d;
-  color: #f0efed;
-  padding: 10px 30px;
-  width: 100%;
-  margin-top: 50px;
-}
-.contact-form-container button:hover, .contact-form-container button:focus {
-  background-color: #074115;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
-}
 
-form {
+.blog {
+  position: relative;
+}
+.blog header {
+  background-image: url(../planted-final-assets/blog-header-1.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  color: #f0efed;
+}
+.blog header h1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: normal;
+  margin: 0;
+}
+.blog header .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 0;
+}
+.blog header .wrapper div {
+  max-width: 300px;
+  margin-top: 150px;
+}
+.blog ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  padding-left: 10px;
 }
-
-input[type=text],
-input[type=email] {
-  width: 48%;
-  margin-bottom: 40px;
-  border: none;
-  border-bottom: 2px solid #0e902d;
-  padding: 20px;
+.blog li {
+  margin: 0 15px;
+  text-transform: uppercase;
 }
-input[type=text]:active, input[type=text]:focus,
-input[type=email]:active,
-input[type=email]:focus {
-  outline: 2px solid #074115;
+.blog nav {
+  background-color: black;
 }
-
-textarea {
-  width: 100%;
-  min-height: 200px;
-  padding: 30px 20px;
-  border: 2px solid #0e902d;
+.blog nav li:nth-child(4) {
+  color: #f8e71c;
 }
-textarea:active, textarea:focus {
-  outline: 2px solid #074115;
+.blog h2 {
+  font-family: "Josefin Sans", sans-serif;
+  color: #f8e71c;
+  font-weight: bold;
+  font-size: 4rem;
+  line-height: 4.6rem;
+  margin: 0;
+}
+.blog main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
