--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -16,7 +16,7 @@
     .wrapper {
       display: flex;
       align-items: center;
-      padding: 10px 0;
+      padding: 10px 0 0;
 
       div {
         max-width: 300px;
