--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html {
   line-height: 1.15;
   -ms-text-size-adjust: 100%;
@@ -698,7 +699,7 @@ span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0;
+  padding: 10px 0 0;
 }
 .contact header .wrapper div {
   max-width: 300px;
@@ -762,9 +763,6 @@ span {
   right: 60px;
 }
 
-.blog {
-  position: relative;
-}
 .blog header {
   background-image: url(../planted-final-assets/blog-header-1.jpg);
   background-position: center;
@@ -785,13 +783,19 @@ span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 10px 0;
+  padding: 10px 0 0;
 }
 .blog header .wrapper div {
   max-width: 300px;
-  margin-top: 150px;
+  margin-top: 180px;
 }
-.blog ul {
+.blog nav {
+  background-color: black;
+}
+.blog nav li:nth-child(4) {
+  color: #f8e71c;
+}
+.blog nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -800,15 +804,9 @@ span {
           justify-content: space-between;
   padding-left: 10px;
 }
-.blog li {
+.blog nav li {
   margin: 0 15px;
   text-transform: uppercase;
-}
-.blog nav {
-  background-color: black;
-}
-.blog nav li:nth-child(4) {
-  color: #f8e71c;
 }
 .blog h2 {
   font-family: "Josefin Sans", sans-serif;
@@ -822,4 +820,141 @@ span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  position: relative;
+}
+
+.about-and-posts {
+  max-width: 30%;
+  background-color: white;
+  margin-top: 100px;
+  margin-left: 80px;
+  padding: 30px;
+  height: 60%;
+}
+.about-and-posts .img-container {
+  background-image: url(../planted-final-assets/side-bar-image.jpg);
+  background-position: center;
+  width: 480px;
+  height: 380px;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  position: relative;
+  top: -50px;
+  right: 110px;
+}
+.about-and-posts h4 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.1rem;
+  letter-spacing: 0.05rem;
+  margin: 0;
+  font-size: 1.2rem;
+}
+.about-and-posts li {
+  line-height: 1.6rem;
+}
+.about-and-posts li::before {
+  content: "•";
+  color: #0e902d;
+  font-size: 1rem;
+  position: relative;
+  right: 12px;
+}
+.about-and-posts a {
+  padding: 1px;
+  font-weight: bold;
+  color: #074115;
+}
+
+.latest-post {
+  max-width: 60%;
+  border-left: 5px solid #f8e71c;
+  border-bottom: 5px solid #f8e71c;
+  padding-right: 150px;
+  padding-left: 50px;
+}
+.latest-post .img-container {
+  -webkit-box-shadow: -20px 20px #f8e71c;
+          box-shadow: -20px 20px #f8e71c;
+  max-width: 820px;
+  position: absolute;
+  right: 0;
+  top: -200px;
+}
+.latest-post .text-container {
+  max-width: 100%;
+  margin-top: 440px;
+}
+.latest-post .wrapper {
+  width: 100%;
+  margin: 0;
+}
+.latest-post h3 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.15rem;
+  letter-spacing: 0.06rem;
+  margin: 0;
+}
+.latest-post p:nth-of-type(1) {
+  margin: 2px 0 40px;
+  font-style: italic;
+  color: #074115;
+}
+.latest-post a {
+  padding: 1px;
+  font-weight: bold;
+}
+
+aside .wrapper {
+  max-width: 60%;
+  margin: 0;
+  margin-left: 560px;
+  padding: 40px 150px 80px 50px;
+}
+aside h4 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.1rem;
+  letter-spacing: 0.05rem;
+  margin: 0;
+  font-size: 1.2rem;
+  margin-bottom: 40px;
+}
+aside input {
+  background-color: #f0efed;
+}
+
+.comment-1,
+.comment-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 50px 0;
+}
+.comment-1 .text-container,
+.comment-2 .text-container {
+  margin-left: 30px;
+}
+.comment-1 p,
+.comment-2 p {
+  margin-top: 20px;
+}
+.comment-1 img,
+.comment-2 img {
+  max-width: 80px;
+  max-height: 80px;
+}
+
+h5 {
+  font-family: "Josefin Sans", sans-serif;
+  font-weight: bold;
+  font-size: 1.6rem;
+  letter-spacing: 0.05rem;
+  margin: 0;
+  font-size: 1rem;
+  color: #074115;
 }
