some tweaks for desktop version

--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -40,6 +40,14 @@
     li {
       margin: 0 15px;
       text-transform: uppercase;
+
+      &:hover {
+        color: $yellow;
+      }
+    }
+
+    a:focus {
+      color: $yellow;
     }
   }
 
