--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -34,12 +34,16 @@
   li {
     margin: 0 15px;
     text-transform: uppercase;
-  }
 
-  li:nth-child(4) {
-    color: $yellow;
-  }
+    &:nth-child(1),
+    &:hover {
+      color: $yellow;
+    }
 
+    a:focus {
+      color: $yellow;
+    }
+  }
   nav {
     background-color: black;
   }
