made header and images more responsive

--- a/styles/sass/partials/_variables-and-mixins.scss
+++ b/styles/sass/partials/_variables-and-mixins.scss
@@ -9,23 +9,31 @@ $green: #0e902d;
 $general-font: "Josefin Sans", sans-serif;
 $text-font: "Roboto", sans-serif;
 
-// mixins
+// mixins font size
+@mixin fontSize($sizeValue) {
+  font-size: $sizeValue * 1px;
+  font-size: ($sizeValue/20) * 1rem;
+}
+
+// mixins typography
 @mixin h1-typography {
+  @include fontSize(40);
   font-family: $general-font;
   font-weight: normal;
   margin: 0;
 }
 
 @mixin h2-typography {
+  @include fontSize(80);
   font-family: $general-font;
   color: $yellow;
   font-weight: bold;
-  font-size: 4rem;
   line-height: 4.6rem;
   margin: 0;
 }
 
 @mixin h2-typography-index {
+  @include fontSize(166);
   font-family: $general-font;
   font-weight: normal;
   font-size: 8.3rem;
@@ -34,25 +42,25 @@ $text-font: "Roboto", sans-serif;
 }
 
 @mixin h3-typography {
+  @include fontSize(56.3);
   font-family: $general-font;
   font-weight: bold;
-  font-size: 2.15rem;
   letter-spacing: 0.06rem;
   margin: 0;
 }
 
 @mixin h4-typography {
+  @include fontSize(43);
   font-family: $general-font;
   font-weight: bold;
-  font-size: 2.1rem;
   letter-spacing: 0.05rem;
   margin: 0;
 }
 
 @mixin h5-typography {
+  @include fontSize(32);
   font-family: $general-font;
   font-weight: bold;
-  font-size: 1.6rem;
   letter-spacing: 0.05rem;
   margin: 0;
 }
