--- a/styles/sass/partials/_blog.scss
+++ b/styles/sass/partials/_blog.scss
@@ -5,7 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 50vh;
+    height: 450px;
     color: $off-white;
 
     h1 {
@@ -19,7 +19,7 @@
 
       div {
         max-width: 300px;
-        margin-top: 180px;
+        margin-top: 200px;
       }
     }
   }
@@ -58,7 +58,6 @@
   main {
     display: flex;
     justify-content: space-between;
-    position: relative;
   }
 }
 
@@ -70,16 +69,16 @@
   margin-left: 80px;
   padding: 30px;
   height: 60%;
+  display: flex;
+  flex-direction: column;
 
   .img-container {
-    background-image: url(../planted-final-assets/side-bar-image.jpg);
-    background-position: center;
-    width: 480px;
-    height: 380px;
+    min-width: 130%;
     box-shadow: none;
     position: relative;
     top: -50px;
     right: 110px;
+    flex-shrink: 2;
   }
 
   h4 {
@@ -110,29 +109,26 @@
   max-width: 60%;
   border-left: 5px solid $yellow;
   border-bottom: 5px solid $yellow;
-  padding-right: 150px;
-  padding-left: 50px;
+  display: flex;
+  flex-direction: column;
 
   .img-container {
     box-shadow: -20px 20px $yellow;
-    max-width: calc(835px - 15px);
-    position: absolute;
+    margin-left: 16px;
+    position: relative;
     right: 0;
     top: -200px;
   }
 
   .text-container {
     max-width: 100%;
-    margin-top: 440px;
-  }
-
-  .wrapper {
-    width: 100%;
-    margin: 0;
+    margin-top: -120px;
+    padding: 0 120px 20px 50px;
   }
 
   h3 {
     @include h3-typography;
+    font-size: 2.15rem;
   }
 
   p:nth-of-type(1) {
@@ -185,8 +181,10 @@ aside {
   }
 }
 
-h5 {
-  @include h5-typography;
-  font-size: 1rem;
-  color: $forest-green;
+ul {
+  h5 {
+    @include h5-typography;
+    font-size: 1rem;
+    color: $forest-green;
+  }
 }
