--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -6,7 +6,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 50vh;
+    height: 450px;
     color: $off-white;
 
     h1 {
@@ -20,7 +20,7 @@
 
       div {
         max-width: 300px;
-        margin-top: 130px;
+        margin-top: 120px;
       }
     }
   }
