--- a/styles/style.css
+++ b/styles/style.css
@@ -419,6 +419,8 @@ footer p {
   height: 80vh;
 }
 .index header h1 {
+  font-size: 40px;
+  font-size: 2rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: normal;
   margin: 0;
@@ -443,6 +445,8 @@ footer p {
   color: #f8e71c;
 }
 .index header h2 {
+  font-size: 166px;
+  font-size: 8.3rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: normal;
   font-size: 8.3rem;
@@ -490,9 +494,10 @@ span {
   text-align: center;
 }
 .about-content h3 {
+  font-size: 56.3px;
+  font-size: 2.815rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 2.15rem;
   letter-spacing: 0.06rem;
   margin: 0;
   font-size: 2.8rem;
@@ -508,9 +513,10 @@ span {
           justify-content: space-between;
 }
 .plants-and-workshops h5 {
+  font-size: 32px;
+  font-size: 1.6rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 1.6rem;
   letter-spacing: 0.05rem;
   margin: 0;
 }
@@ -558,9 +564,10 @@ span {
   margin: 100px auto 80px;
 }
 .resources h5 {
+  font-size: 32px;
+  font-size: 1.6rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 1.6rem;
   letter-spacing: 0.05rem;
   margin: 0;
   position: relative;
@@ -632,9 +639,10 @@ span {
   margin: 100px auto;
 }
 .founder h4 {
+  font-size: 43px;
+  font-size: 2.15rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 2.1rem;
   letter-spacing: 0.05rem;
   margin: 0;
 }
@@ -687,10 +695,12 @@ span {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vh;
+  height: 450px;
   color: #f0efed;
 }
 .contact header h1 {
+  font-size: 40px;
+  font-size: 2rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: normal;
   margin: 0;
@@ -706,7 +716,7 @@ span {
 }
 .contact header .wrapper div {
   max-width: 300px;
-  margin-top: 130px;
+  margin-top: 120px;
 }
 .contact ul {
   display: -webkit-box;
@@ -731,10 +741,11 @@ span {
   background-color: black;
 }
 .contact h2 {
+  font-size: 80px;
+  font-size: 4rem;
   font-family: "Josefin Sans", sans-serif;
   color: #f8e71c;
   font-weight: bold;
-  font-size: 4rem;
   line-height: 4.6rem;
   margin: 0;
 }
@@ -774,10 +785,12 @@ span {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  height: 50vh;
+  height: 450px;
   color: #f0efed;
 }
 .blog header h1 {
+  font-size: 40px;
+  font-size: 2rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: normal;
   margin: 0;
@@ -793,7 +806,7 @@ span {
 }
 .blog header .wrapper div {
   max-width: 300px;
-  margin-top: 180px;
+  margin-top: 200px;
 }
 .blog nav {
   background-color: black;
@@ -821,10 +834,11 @@ span {
   color: #f8e71c;
 }
 .blog h2 {
+  font-size: 80px;
+  font-size: 4rem;
   font-family: "Josefin Sans", sans-serif;
   color: #f8e71c;
   font-weight: bold;
-  font-size: 4rem;
   line-height: 4.6rem;
   margin: 0;
 }
@@ -835,7 +849,6 @@ span {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
 }
 
 .about-and-posts {
@@ -845,22 +858,29 @@ span {
   margin-left: 80px;
   padding: 30px;
   height: 60%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .about-and-posts .img-container {
-  background-image: url(../planted-final-assets/side-bar-image.jpg);
-  background-position: center;
-  width: 480px;
-  height: 380px;
+  min-width: 130%;
   -webkit-box-shadow: none;
           box-shadow: none;
   position: relative;
   top: -50px;
   right: 110px;
+  -ms-flex-negative: 2;
+      flex-shrink: 2;
 }
 .about-and-posts h4 {
+  font-size: 43px;
+  font-size: 2.15rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 2.1rem;
   letter-spacing: 0.05rem;
   margin: 0;
   font-size: 1.2rem;
@@ -885,31 +905,35 @@ span {
   max-width: 60%;
   border-left: 5px solid #f8e71c;
   border-bottom: 5px solid #f8e71c;
-  padding-right: 150px;
-  padding-left: 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .latest-post .img-container {
   -webkit-box-shadow: -20px 20px #f8e71c;
           box-shadow: -20px 20px #f8e71c;
-  max-width: 820px;
-  position: absolute;
+  margin-left: 16px;
+  position: relative;
   right: 0;
   top: -200px;
 }
 .latest-post .text-container {
   max-width: 100%;
-  margin-top: 440px;
-}
-.latest-post .wrapper {
-  width: 100%;
-  margin: 0;
+  margin-top: -120px;
+  padding: 0 120px 20px 50px;
 }
 .latest-post h3 {
+  font-size: 56.3px;
+  font-size: 2.815rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 2.15rem;
   letter-spacing: 0.06rem;
   margin: 0;
+  font-size: 2.15rem;
 }
 .latest-post p:nth-of-type(1) {
   margin: 2px 0 40px;
@@ -928,9 +952,10 @@ aside .wrapper {
   padding: 40px 150px 80px 50px;
 }
 aside h4 {
+  font-size: 43px;
+  font-size: 2.15rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 2.1rem;
   letter-spacing: 0.05rem;
   margin: 0;
   font-size: 1.2rem;
@@ -961,10 +986,11 @@ aside input {
   max-height: 80px;
 }
 
-h5 {
+ul h5 {
+  font-size: 32px;
+  font-size: 1.6rem;
   font-family: "Josefin Sans", sans-serif;
   font-weight: bold;
-  font-size: 1.6rem;
   letter-spacing: 0.05rem;
   margin: 0;
   font-size: 1rem;
