--- a/styles/style.css
+++ b/styles/style.css
@@ -507,10 +507,13 @@ footer p {
           align-items: center;
   padding: 10px 0;
 }
-.index .main-and-aside-container {
+
+.header-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
+  max-width: 50%;
 }
 
 span {
@@ -521,11 +524,10 @@ span {
 .header-img-2 {
   background-image: url(../planted-final-assets/header-box.jpg);
   background-position: center;
-  max-width: 500px;
-  max-height: 500px;
-  position: relative;
-  left: 700px;
-  bottom: 100px;
+  max-width: 100%;
+  position: absolute;
+  right: -650px;
+  top: -300px;
 }
 
 .about {
@@ -605,6 +607,7 @@ span {
 
 .resources {
   margin: 100px auto 80px;
+  padding-left: 10px;
 }
 .resources h5 {
   position: relative;
